--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "vendor/glfw"]
-	path = vendor/glfw
+	path = vendor/libs/glfw
 	url = https://github.com/glfw/glfw.git
 [submodule "vendor/spdlog"]
-	path = vendor/spdlog
+	path = vendor/headers/spdlog
 	url = https://github.com/gabime/spdlog.git
 [submodule "vendor/glm"]
-	path = vendor/glm
+	path = vendor/headers/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "vendor/headers/entt"]
+	path = vendor/headers/entt
+	url = https://github.com/skypjack/entt.git
